--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,4 +5,4 @@ jobs:
     runs-on : ubuntu-latest
     steps:
       - name: Greet
-        run: echo "Hello World!!"
+        run: echo "Hello World!!!"
